@@ -40,7 +40,7 @@ spec = Gem::Specification.new do |s|
 
   # Dependencies
   s.required_ruby_version = '>= 1.8.7'
-  s.add_dependency('activerecord', '>= 3.0.1')
+  s.add_dependency('activerecord', '>= 3.0.3')
   s.add_development_dependency "rspec"
 end
 
