@@ -2,8 +2,7 @@ module CompositePrimaryKeys
   module VERSION #:nodoc:
     MAJOR = 3
     MINOR = 0
-    TINY  = 1
-    PATCH = 0
-    STRING = [MAJOR, MINOR, TINY, PATCH].join('.')
+    TINY  = 3
+    STRING = [MAJOR, MINOR, TINY].join('.')
   end
 end
